# TINN-Iris-Dataset

./: README.md
FirstTINN/: CMakeLists.txt  main.c  testdata.txt  traindata.txt
FirstTINN/FirstTINN/: main.c
FirstTINN/FirstTINN/tinn-master/: CMakeLists.txt  Tinn.d  Tinn.h.gch  test.d
